# clookup

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  TODO.md  build.rs
.github/workflows/: rust.yml
benches/: full.rs  system.rs
src/: core.rs  lib.rs  pcs.rs  poly.rs  utils.rs
src/core/: cuda_prover.rs  precomputation.rs  prover.rs  sumcheck.rs  test.rs  verifier.rs
src/pcs/: multilinear.rs
src/pcs/multilinear/: kzg.rs
src/poly/: multilinear.rs  multivariate.rs
src/poly/multivariate/: coefficient.rs
src/sumcheck/: classic.rs  cuda.rs  mod.rs  parallel.rs
src/utils/: arithmetic.rs  hash.rs  transcript.rs
src/utils/arithmetic/: fft.rs  msm.rs
