[package]
name = "clookup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ff = "0.13.0"
plonkish_backend = { git = "https://github.com/jeong0982/plonkish" }
rayon = "1.8"
halo2curves = { git = "https://github.com/privacy-scaling-explorations/halo2curves", tag = "v0.6.1", package = "halo2curves" }
