[package]
name = "clookup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.0"
ff = "0.13.0"
plonkish_backend = { git = "https://github.com/jeong0982/plonkish" }

# bn256
halo2curves = { git = "https://github.com/privacy-scaling-explorations/halo2curves", tag = "v0.6.1", package = "halo2curves" }

# concurrency
rayon = "1.8"
