[package]
name = "clookup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.0"
ff = "0.13.0"
itertools = "0.10.5"
num-bigint = "0.4.3"
num-integer = "0.1.45"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
bitvec = "1.0.1"
sha3 = "0.10.6"

# bn256
halo2curves = { git = "https://github.com/privacy-scaling-explorations/halo2curves", tag = "0.3.3", package = "halo2curves", features = ["derive_serde"] }

# timer
ark-std = { version = "^0.4.0", default-features = false, optional = true }

# concurrency
rayon = "1.8"
